<resources>
    <string name="app_name">RiskWatch</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="todo">TODO</string>
    <string name="battery_100">Battery: 100%</string>
    <string name="riskwatch">RiskWatch</string>
    <string name="hi_user">Hi User!</string>
    <string name="log_out">Log Out</string>
    <string name="riskwatch_logo">RiskWatch logo</string>
    <string name="Password">password</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="link_account">Link Account</string>
    <string name="your_user_id">Your User ID:</string>
    <string name="enter_user_id">Enter User ID</string>
    <string name="link_accounts">Link Accounts</string>
    <string name="go_back_to_home_activity">Go Back to Home Activity</string>
    <string name="copy_user_id">Copy User ID</string>
    <string name="back_to_home">Back to Home</string>
    <string name="name">Name</string>
    <string name="add_fall">Add Fall</string>
    <string name="go_to_register">Go to Register</string>
    <string name="currently_linked_users">Currently linked users</string>
    <string name="textview">TextView</string>
    <string name="account_linking">Account Linking</string>
    <string name="error_bluetooth_not_supported">Bluetooth LE is not supported on this device</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="unknown_address">Unknown Address</string>
    <string name="permissions_granted">Permissions granted</string>
    <string name="permissions_denied">Permissions denied</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting...</string>
    <string name="scan">Scan</string>
    <string name="scanning">Scanning...</string>
    <string name="disconnecting">Disconnecting...</string>
    <string name="your_alexa_devices">Your Alexa Devices</string>
    <string name="sign_in_with_amazon">Sign in with Amazon</string>
    <string name="amazon_login_success">Successfully signed in with Amazon</string>
    <string name="amazon_login_error">Error signing in with Amazon</string>
    <string name="link_amazon_account">Link Amazon Account</string>
</resources>
