<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#377FC2"
    android:paddingLeft="10sp"
    android:paddingTop="10sp"
    android:paddingRight="10sp"
    android:paddingBottom="10sp"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/batteryOutline"
        android:layout_width="175dp"
        android:layout_height="99dp"
        android:layout_marginStart="6dp"
        android:rotation="90"
        android:scaleX=".7"
        android:scaleY="1.05"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/batteryLevel"
        app:layout_constraintEnd_toEndOf="@+id/batteryLevel"
        app:layout_constraintStart_toStartOf="@+id/batteryLevel"
        app:layout_constraintTop_toTopOf="@+id/batteryLevel"
        app:srcCompat="@drawable/battery_outline"
        tools:visibility="invisible"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/riskWatchText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:shadowColor="#000000"
        android:text="@string/riskwatch"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/batteryLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/battery_100"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/riskWatchText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fallRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="2dp"
        android:padding="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/batteryLevel" />


</androidx.constraintlayout.widget.ConstraintLayout>